<?xml version="1.0"?>
<package format="2">
  <name>robomobo_description</name>
  <version>0.0.0</version>
  <description>The robomobo_description package</description>

  
  <maintainer email="vitaliipepko@gmail.com">Vitalii Pepko</maintainer>


  
  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>


  
  <export>
    

  </export>
</package>
